application/kube-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      deploy: fargate
  template:
    metadata:
      labels:
        deploy: fargate
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
