application/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  name: "demo-nginx-service"
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    deploy: fargate
